# aircraft_manager

./: .gitignore  README.md  pyproject.toml
src/: .env  .env.testing  04122024_aircraftdb_dump.sql  Makefile  alembic.ini  exceptions.py  main.py  models.py  repository.py  schemas.py  settings.py
src/alembic/: env.py  script.py.mako
src/alembic/versions/: 6d3d857e341e_add_cruise_speed_column.py  9048202cb7c2_aircraft_type_name_change.py  c6f01ba61cf8_armament_weight_name_change.py  d59016a14a74_create_baseline_database_schema.py  ebc5478e47c1_add_column_max_speed.py
src/config/: aircrafts_db.db  database.py
src/router/: api.py  weather_api.py
src/use_cases/: performance.py
src/utils/: init_db.py  support.py
tests/: conftest.py  test_api.py  test_performance.py
